# simple-personal-site

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile-alpine  LICENSE  Pipfile  Procfile  README.md  config.example.env  example.env  manage.py  pyproject.toml  requirements.txt  ruff.toml  site_config.example.env  sps-nginx.example.conf
.github/: dependabot.yml
.github/workflows/: build.yml  build_contact_only.yml  build_main.yml  build_master.yml  build_remote_user_auth.yml  clean_ghcr.yml  cleanup-test.yml  dependency_review.yml  test.yml  test_merge.yml
_samples/: docker-compose.yml
_samples/nginx/: Dockerfile
blog/: admin.py  models.py  sitemaps.py  urls.py  views.py
chrisxtk/: settings.py  urls.py  wsgi.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
docker/: Dockerfile  docker-compose.yml
global_config/: admin.py  apps.py  forms.py  models.py  site_config.py  views.py
home/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
homepage/: admin.py  apps.py  models.py  urls.py  views.py
media/: admin.py  apps.py  models.py
projects/: admin.py  models.py  urls.py  views.py
samples/: docker-compose.yml
sg_client/: sendgrid.py
shorturl/: admin.py  apps.py  models.py  urls.py  views.py
simple_personal_site/: context_processor.py  forms.py  middleware.py  oidc_backend.py  sendgrid.py  settings.py  site_config.example.py  site_config.py  sitemaps.py  urls.py  wsgi.py
static/: robots.txt
url_shortener/: admin.py  apps.py  models.py  urls.py  views.py
(+152 files in other folders)
