[project]
name = "simple-personal-site"
version = "1.0.0"
requires-python = ">=3.10,<3.15"
dependencies = [
    "django~=5.2.15",
    "django-minify-html~=1.14.0",
    "django-solo~=2.5.1",
    "gunicorn>=26.0.0,<27.0.0",
    "mistune~=3.3.2",
    "nh3~=0.3.6",
    "pillow>=12.3.0,<13.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "pygments>=2.20.0,<3.0.0",
    "pymysql>=1.2.0,<2.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "requests>=2.34.2,<3.0.0",
]

[tool.uv]
exclude-newer = "P3D"
